# multi-agent-orchestrator-templates

./: AGENT.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/multi_agent_orchestrator_templates/: __init__.py  cli.py  core.py
tests/: test_core.py
